2002-09-12  Keisuke Nishida  <knishida@netlab.jp>

	* parser.y (validate_field_tree): Validate groups not having PICTURE.

2002-09-09  Keisuke Nishida  <knishida@netlab.jp>

	* parser.y (ambiguous_error): display all fields with the same name.
	(occurs_index): Use undefined_word.  Set cobc_location.

2002-08-29  Keisuke Nishida  <knishida@netlab.jp>

	* cobc.c (temp_name): Use GetTempFileName on MinGW.

2002-08-28  Keisuke Nishida  <knishida@netlab.jp>

	* cobc.c (terminate): Renamed from `error'.
	(temp_name): Use GetTempPath on MinGW environment.

2002-08-20  Keisuke Nishida  <knishida@netlab.jp>

	* parser.y: No support of comments in IDENTIFICATION DIVISION.
	(AUTHOR, DATE_WRITTEN, DATE_COMPILED, INSTALLATION, SECURITY): Removed.
	(identification_division_options, identification_division_option)
	(comment): Removed.
	* reserved.c (reserved_words): Removed the tokens above.
	* scanner.h, scanner.l (cobc_skip_comment): Removed.
	* scanner.l: Don't handle the case of cobc_skip_comment.

2002-08-20  Keisuke Nishida  <knishida@netlab.jp>

	* cobc.c: New option -semi-fixed.

2002-08-02  Keisuke Nishida  <knishida@netlab.jp>

	* codegen.c (output_compare): Use the new cob_cmp_all scheme.

2002-08-01  Keisuke Nishida  <knishida@netlab.jp>

	* parser.y, reserved.c: SORT and MERGE support.

2002-08-01  Keisuke Nishida  <knishida@netlab.jp>

	* tree.h (cobc_key): Define `dir' as int.
	Use COB_ASCENDING or COB_DESCENDING for this.
	* inline.c (output_search_all): Updated.
	* parser.y (ascending_or_descending): Updated.

2002-08-01  Keisuke Nishida  <knishida@netlab.jp>

	* parser.y (occurs_clause): Use predefined_name for DEPENDING ON.
	(record_depending): Set `record_depending' directly.

2002-07-31  Keisuke Nishida  <knishida@netlab.jp>

	* codegen.h (cobc_program_spec): Renamed from `program_spec'.
	* parser.y (program_spec): Updated.
	* codegen.c: (output_switch): New variable.
	(output, output_newline, output_prefix, output_line): Updated.