@@ -1,6 +1,7 @@
 2002-09-12  Keisuke Nishida  <knishida@netlab.jp>
 
 	* parser.y (validate_field_tree): Validate groups not having PICTURE.
+	(validate_field_tree): Create PICTURE of INDEX here, not in USAGE.
 
 2002-09-09  Keisuke Nishida  <knishida@netlab.jp>
 
